Bug 167135 - Transparency setting in page style area fails for image and pattern backgrounds (win)
Summary: Transparency setting in page style area fails for image and pattern backgroun...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.4.3 release
Hardware: Other Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.2.5 target:25...
Keywords: bibisected, bisected, regression
: 167276 (view as bug list)
Depends on:
Blocks: Writer-Styles-Page
  Show dependency treegraph
 
Reported: 2025-06-20 18:52 UTC by roboduck77
Modified: 2025-07-01 22:12 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Linux vs windows comparison of image transparency (427.87 KB, image/png)
2025-06-21 10:52 UTC, Mateusz Wlazłowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description roboduck77 2025-06-20 18:52:21 UTC
Description:
 Here's what I do: I open up Page Style on an odt text document. I have the area set for an image as background. The image as originally imported is too dark and I want to lighten it up. So I click on transparency, which then shows Area Transparency Mode with the button displaying No Transparency. I click on the "transparency" button halfway between "No Transparency" on top and "gradient" on bottom. The automatically proffered setting is 50%, but it can be set to any percentage. I hit "apply" at the bottom of the box. However, regardless of the percentage setting, there is absolutely no transparency adjustment. The area background image remains exactly as originally imported. I hit "reset." Nothing happens.

I've been using LO for more than ten years, almost entirely with odt text documents, for at least half of which (literally thousands) I've had to make transparency adjustments. Which never, ever failed. And now they simply don't work at all.


Steps to Reproduce:
1.Select Page Style: Area: Image
2.Select Transparency mode: Any percentage
3.Select "Apply"
4.No effect whatsoever. 

Actual Results:
Nothing happened. Have previously used transparency adjustment in page style very successfully in thousands of odt documents. Now all those transparency adjustments (in prior documents) have disappeared and cannot be recreated. Nor can such adjustments be made in newly created documents.

Expected Results:
Normally, one would see a lightening effect on the background image, with greater lightening with higher percentage transparency. Now nothing happens at all.


Reproducible: Always


User Profile Reset: No

Additional Info:
Invoking the "Area Transparency Mode" on the Page Style sheet should lighten the Background image. NOTA BENE: The same problem occurs when using the transparency option in paragraph style.

Version: 25.2.4.3 (X86_64) / LibreOffice Community
Build ID: 33e196637044ead23f5c3226cde09b47731f7e27
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 2 roboduck77 2025-06-21 08:55:20 UTC
6/21/2025 Edit Addition:Important Update: I've now tried the transparency adjustment (in odt documents) in each of the (1) Color, (2) Gradient, (3) Image, (4) Pattern, and (5) Hatch alternatives on the Page Style: Area block. Very interestingly, the transparency option DOES work (consistently) in each of the (1) Color, (2) Gradient, and (5) Hatch alternatives. The transparency option DOES NOT work (consistently) on either of the (3) Image or (4) Pattern alternatives. I will see if I can add this to the above-referenced bugzilla report.
Comment 3 Mateusz Wlazłowski 2025-06-21 10:50:46 UTC
Unless it was decided to remove the transparency on windows, it is a regression. The transparency works on Linux. It was working on windows at least up to 7.2.0.4


Confirm with :

Version: 25.2.4.3 (X86_64) / LibreOffice Community
Build ID: 33e196637044ead23f5c3226cde09b47731f7e27
CPU threads: 2; OS: Windows 11 X86_64 (10.0 build 22621); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded


Versions where the transparency of images works :

Version: 7.2.0.4 (x64) / LibreOffice Community
Build ID: 9a9c6381e3f7a62afc1329bd359cc48accb6435b
CPU threads: 2; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

Version: 25.2.4.3 (X86_64) / LibreOffice Community
Build ID: 33e196637044ead23f5c3226cde09b47731f7e27
CPU threads: 8; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Flatpak
Calc: threaded
Comment 4 Mateusz Wlazłowski 2025-06-21 10:52:25 UTC
Created attachment 201399 [details]
Linux vs windows comparison of image transparency
Comment 5 roboduck77 2025-06-21 11:57:19 UTC
6/21/2025 @7:55 A.M. (EST-US):  1. Deleted LO 25.2.4.

2. Installed LO 24.8.7.

3. Problem no longer exists in 24.8.7. Transparency works fine for all five options under Page Style: Area.

4. Ergo, this would definitely appear to be a bug in post-24.8.7 iterations of LO. At least on old W10 Dell laptops.
Comment 6 Saburo 2025-06-22 03:26:14 UTC
bibisected with win64-25.8
author	Noel Grandin
commit 1f61a2ec4e252d2eeccabd65a10650c8ee231a1b

tdf#166715 speed up transparent fill operation
Transparent bitmapex drawing works fine these days, so we dont
need this fallback path anymore.
Comment 7 roboduck77 2025-06-25 10:55:18 UTC
6/25/2025: 6:32 A.M. (EST/US) After email notice from M. Wlazlowski, I supposed that a fix had been implemented. After then re-installing LO 25.2.4.3, I find that this is not the case. The same continuing transparency problems in latest W10 for page Style: Area - Image and Pattern occur in the same manner as previously, i.e., no transparency is possible at all. Is this specifically a W10 problem with some of the more recent W10 updates? I'm not in a position to test that out by trying backdated W10 versions. (Disabled, non-tech, old-age pensioner in a nursing home with old laptop). When I installed the older LO 24 versions they somehow keep automatically being updated. Question: How to lock in LO 24.8.7 so it won't be automatically updated. All suggestions and help appreciated.
Comment 8 Commit Notification 2025-06-26 12:41:50 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9c8368955b8f512d75268e7ed89e692fa9d1c930

tdf#167135 Transparency setting page style area for image background

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Shantanu 2025-06-27 03:22:25 UTC
Is it possible to make it available in earlier version for e.g. 25.8? A user (roboduck77) would really appreciate seeing this fix sooner rather than later!
Comment 10 Commit Notification 2025-06-27 11:04:55 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/89d8208c50ebf5ab5dc07d73a65a59bb549749b8

tdf#167135 Transparency setting page style area for image background

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-06-28 19:44:13 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/3389c9233a475f7b53b2621f645c752ec61dfc73

tdf#167135 Transparency setting page style area for image background

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 m_a_riosv 2025-07-01 21:53:57 UTC
Verifyed
Version: 25.8.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: 3b1cc18a0d1caf64104f9962011a4781b90b915a
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (es_ES); UI: en-US
Calc: CL threaded
Comment 13 m_a_riosv 2025-07-01 22:12:38 UTC
*** Bug 167276 has been marked as a duplicate of this bug. ***