drawinglayer/source/processor2d/vclprocessor2d.cxx
@@ -553,6 +553,13 @@ void VclProcessor2D::RenderFillGraphicPrimitive2D(
         return;
     }
 
+    if (rFillBitmapCandidate.hasTransparency())
+    {
+        // cannot handle yet, use decomposition
+        process(rFillBitmapCandidate);
+        return;
+    }
+
     bool bPrimitiveAccepted = RenderFillGraphicPrimitive2DImpl(rFillBitmapCandidate);
 
     if (!bPrimitiveAccepted)
